docs: add docs for transactions
